# prompt-lens

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run.py
backend/src/: __init__.py  config.py
backend/src/application/: __init__.py
backend/src/application/interfaces/: __init__.py  cache_gateway.py  embeddings_gateway.py  example_gateway.py  llm_analyzer.py  retriever_gateway.py
backend/src/application/use_cases/: __init__.py  analyze_prompt.py
backend/src/domain/: __init__.py
backend/src/domain/entities/: __init__.py  prompt_analysis.py
backend/src/domain/repositories/: __init__.py  example_repository.py
backend/src/infrastructure/: __init__.py  stats.py  stub_gateway.py
backend/src/infrastructure/cache/: __init__.py  memory_cache.py  null_cache.py
backend/src/infrastructure/embeddings/: __init__.py  openai_embeddings.py
backend/src/infrastructure/llm/: __init__.py  openai_analyzer.py
backend/src/infrastructure/rag/: __init__.py  knowledge.py  local_retriever.py  memory_retriever.py
backend/src/infrastructure/repositories/: __init__.py
backend/src/presentation/: __init__.py
backend/src/presentation/api/: app.py  errors.py  middleware.py  rate_limit.py  routes.py  schemas.py
backend/src/presentation/cli/: main.py
backend/tests/: conftest.py
backend/tests/integration/: test_analyze.py  test_health.py
backend/tests/unit/: test_analyze_prompt.py  test_example.py
frontend/: .env.example  .gitignore  Dockerfile  (+3 more)
(+10 files in other folders)
